<resources>
    <string name="app_name">CatCare</string>
    <string name="my_pets">Мои питомцы</string>
    <string name="diary">Дневник</string>
    <string name="helpful">Полезное</string>
    <string name="btn_fact">Факт о кошках</string>
    <string name="btn_another_fact">Другой факт</string>
    <string name="internet_connection_error">Произошла ошибка. Проверьте подключение к интернету.</string>
    <string name="btn_start">Начать</string>
    <string name="name">Имя</string>
    <string name="breed">Порода</string>
    <string name="gender">Пол</string>
    <string name="gender_female">Женский</string>
    <string name="gender_male">Мужской</string>
    <string name="birth_day">День рождения</string>
    <string name="btn_save">Сохранить</string>
    <string name="error_field_must_not_be_empty">Поле не должно быть пустым</string>
    <string name="edit">Редактировать</string>
    <string name="download">Идет загрузка</string>
    <string name="download_successful">Загрузка фотографии успешно завершена</string>
    <string name="download_failed">Произошла ошибка при загрузке фотографии. Проверьте подключение к интернету.</string>
    <string name="btn_ok">ОК</string>
    <string name="profile_saving_successful">Профиль успешно изменен</string>
    <string name="profile_saving_failed">Произошла ошибка. Попробуйте позднее.</string>
    <string name="flea_treatment">Обработка от блох</string>
    <string name="unusual_behaviour">Необычное поведение</string>
    <string name="vaccination">Вакцинация</string>
    <string name="medicine">Прием лекарств</string>
    <string name="trip_to_vet">Поход к ветеринару</string>
    <string name="weight_control">Контроль веса</string>
    <string name="weight">Вес:</string>
    <string name="date">Дата:</string>
    <string name="kilogram">кг</string>
    <string name="choose_date">Выберите дату</string>
    <string name="add">Добавить</string>
    <string name="weight_must_be_less_then">Вес не должен превышать %s килограмм</string>
    <string name="weight_must_be_more_then" formatted="true">Вес должен быть больше %s килограмм</string>
    <string name="description">Описание:</string>
    <string name="choose_behaviour">Выберите настроение питомца</string>
    <string name="tender">Ласковый</string>
    <string name="sleepy">Сонный</string>
    <string name="angry">Злой</string>
    <string name="sad">Грустный</string>
    <string name="active">Активный</string>
    <string name="fearful">Пугливый</string>
    <string name="behaviour_adding_hint">Возможно запомнилось что-то особенное?</string>
    <string name="weight_adding_hint">Введите вес</string>
    <string name="vaccination_adding_hint">Введите данные о вакцине</string>
    <string name="medicine_adding_hint">Введите данные о лекарстве</string>
    <string name="treatment_adding_hint">Введите данные о препарате</string>
    <string name="vet_adding_hint">Введите поставленный диагноз</string>
    <string name="note_deleted">Запись удалена</string>
    <string name="cancel">Отменить</string>
    <string name="new_note">Новая запись</string>
    <string name="share_your_thoughts">Поделитесь своими мыслями</string>
    <string name="note_adding_successful">Запись успешно добавлена</string>
    <string name="delete">Удалить</string>
    <string name="btn_add_hint">Здесь пока ничего нет, но чтобы добавить новую запись нажмите на "+"</string>
    <string name="long_download">Изображение загружается очень долго. Проверьте подключение к интернету.</string>
    <string name="btn_begin">Перейти</string>
    <string name="news_title_1">Как понять что ваш кот толстый?</string>
    <string name="news_description_1">Полненькие питомцы выглядят умилительно. Однако не нужно забывать: лишний вес — это лишние проблемы со здоровьем вашего кота.
        Как минимум: с дыханием, суставами и работой сердечно-сосудистой системы. Когда у кошки нормальный вес, вы можете видеть, как ваше животное дышит, по колебаниям рёбер.
        А вот когда питомец начал «расползаться», вам придётся хорошенько присмотреться, чтобы увидеть процесс дыхания. Рёбра вашей кошки должны хорошо прощупываться. Посмотрите на кошку, лежащую на боку.
        Если вы не видите чёткого перехода от её живота к бедрам, значит, ваш питомец точно пополнел.</string>
    <string name="welcome_title_1">Здравствуйте!</string>
    <string name="welcome_description_1">Наше приложение поможет вам контролировать здоровье вашего питомца</string>
    <string name="welcome_title_2">Вы не забудете ничего</string>
    <string name="welcome_description_2">Ведь теперь вы сможете сохранять всё: от обычных заметок о прошедшем дне до важных записей о вакцинации</string>
    <string name="welcome_title_3">Хотите начать?</string>
    <string name="welcome_description_3">Тогда давайте заполним данные о вашем питомце</string>
</resources>
